--- a/AuthServer.API/appsettings.json
+++ b/AuthServer.API/appsettings.json
@@ -6,6 +6,18 @@
     "RefreshTokenExpiration": 600,
     "SecurityKey": "mysecuritykeymysecuritykeymysecuritykeymysecuritykey"
   },
+  "Clients": [
+    {
+      "Id": "SpaApp",
+      "Secret": "secret",
+      "Audiences": [ "www.miniapp3.com" ]
+    },
+    {
+      "Id": "MobileApp",
+      "Secret": "secret",
+      "Audiences": [ "www.miniapp3.com", "www.miniapp4.com" ]
+    }
+  ],
   "Logging": {
     "LogLevel": {
       "Default": "Information",
