--- a/MiniApp3.API/appsettings.json
+++ b/MiniApp3.API/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": [ "www.miniapp3.com" ],
+    "Issuer": "www.authserver.com",
+    "AccessTokenExpiration": 5,
+    "SecurityKey": "mysecuritykeymysecuritykeymysecuritykeymysecuritykey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
