Fluent Validation kütüphanesi projeye dahil etme

--- a/AuthServer.API/appsettings.json
+++ b/AuthServer.API/appsettings.json
@@ -3,7 +3,7 @@
     "SqlServer": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AuthServerToken;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "TokenOptions": {
-    "Audience": [ "www.authserver.com", "www.miniapp1.com", "www.miniapp2.com", "www.miniapp3.com" ],
+    "Audience": [ "www.authserver.com", "www.miniapp1.com", "www.miniapp2.com"  ],
     "Issuer": "www.authserver.com",
     "AccessTokenExpiration": 5,
     "RefreshTokenExpiration": 600,
